# log_puzzle_py

./: .gitignore  README.md  logpuzzle.py  pyproject.toml
animaldir/: index.html
placedir/: index.html
puzzle_venv/: pyvenv.cfg
soln/: logpuzzle.py
